--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,17 @@
   <body>
     <load ="partials/header.html" />
     <main>
+      <load ="partials/sections/section-slider.html" />
+      <section class="test-imgs">
+        <div class="container test-imgs__block">
+
+          
+            <img src="/img/mark.jpg" class="html-img" alt="" loading="lazy">
+
+            <div class="css-img"></div>
+
+        </div>
+      </section>
       <load ="partials/sections/section-hero.html" />
       <section>
         <h1>Lorem ipsum dolor sit amet.</h1>
